--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .gallery-container {
-  padding-top: 20%;
+  padding-top: 10%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -31,9 +31,11 @@ body {
 }
 
 .desc {
-  padding: 15px;
+  padding: 12px;
   color: white;
+  font-weight: 500;
   text-align: center;
+  font-size: 22px;
 }
 
 /*Music Player*/
@@ -219,19 +221,18 @@ h1 {
   padding-top: 30px;
 }
 
-.custom-button {
+
+.custom-button1{
   background-color: #f6bd60;
   color: black;
-  padding: 14px 30px;
+  padding: 14px 40px;
   border: none;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  margin-right: 10px;
   border-radius: 35px;
-}
-
-.custom-button:last-child {
-  margin-right: 0; /* Removes right margin from the last button */
+ margin-left: 15px;
+ margin-right: 15px;
+  font-size: 15px;
+  transition: background-color 0.3s;
 }
